@@ -4,9 +4,9 @@ lib_LTLIBRARIES = libast.la
 
 INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/include/$(PACKAGE)
 
-libast_la_SOURCES = \
-    array.c conf.c debug.c dlinked_list.c file.c \
-    linked_list.c mem.c msgs.c obj.c options.c regexp.c \
+libast_la_SOURCES =							\
+    array.c builtin_hashes.c conf.c debug.c dlinked_list.c file.c	\
+    linked_list.c mem.c msgs.c obj.c options.c regexp.c			\
     socket.c str.c strings.c snprintf.c tok.c url.c
 
 libast_la_LDFLAGS = -version-info 2:0:0
